--- a/index.html
+++ b/index.html
@@ -25,15 +25,31 @@
     <div class="site__tabs">
 
         <!-- plastic -->
-        <a class="plastic active" href="#">Пластическая хирургия</a>
+        <a class="site__tabs-item active" href="#">Пластическая
+            хирургия</a>
         <!-- /plastic -->
 
         <!-- maxillofacial -->
-        <a class="maxillofacial" href="#">Челюстно-лицевая хирургия</a>
+        <a class="site__tabs-item" href="#">Челюстно-лицевая
+            хирургия</a>
         <!-- /maxillofacial -->
 
         <!-- stomatology -->
-        <a class="stomatology" href="#">Стоматология</a>
+        <a class="site__tabs-item" href="#"><span>Стоматология</span></a>
+        <!-- /stomatology -->
+
+        <!-- stomatology -->
+        <a class="site__tabs-item" href="#">Ортодонтия и детская
+            стоматология</a>
+        <!-- /stomatology -->
+
+        <!-- stomatology -->
+        <a class="site__tabs-item" href="#"><span>Рентгендиагностика</span></a>
+        <!-- /stomatology -->
+
+        <!-- stomatology -->
+        <a class="site__tabs-item" href="#">Зуботехническая
+            лаборатория</a>
         <!-- /stomatology -->
 
     </div>
@@ -229,11 +245,10 @@
 
                             <!-- swiper-slide -->
                             <div class="swiper-slide">
-                                <div class="slider__layout" style="background-image: url(pic/main-slider.jpg)">
+                                <div class="slider__layout" style="background-image: url(pic/slider-pic.png)">
                                     <div class="slider__title">
-                                        <h2>улучшение
-                                            контура лица</h2>
-                                    <span>Без осложнений, инфици - рования и ускорить процесс</span>
+                                        <h2>Фрезерный станок ZirkonZahn</h2>
+                                    <span>ез осложнений, инфици- рования и ускорить процесс </span>
                                         <a class="slider__more" href="#">Подробнее</a>
                                     </div>
                                 </div>
@@ -247,6 +262,32 @@
                                         <h2>улучшение
                                             контура лица</h2>
                                     <span>Без осложнений, инфици - рования и ускорить процесс</span>
+                                        <a class="slider__more" href="#">Подробнее</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- /swiper-slide -->
+
+                            <!-- swiper-slide -->
+                            <div class="swiper-slide">
+                                <div class="slider__layout" style="background-image: url(pic/main-slider01.jpg)">
+                                    <div class="slider__title">
+                                        <h2>улучшение
+                                            контура лица</h2>
+                                        <span>Без осложнений, инфици - рования и ускорить процесс</span>
+                                        <a class="slider__more" href="#">Подробнее</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- /swiper-slide -->
+
+                            <!-- swiper-slide -->
+                            <div class="swiper-slide">
+                                <div class="slider__layout" style="background-image: url(pic/main-slider03.jpg)">
+                                    <div class="slider__title">
+                                        <h2>улучшение
+                                            контура лица</h2>
+                                        <span>Без осложнений, инфици - рования и ускорить процесс</span>
                                         <a class="slider__more" href="#">Подробнее</a>
                                     </div>
                                 </div>
@@ -327,11 +368,11 @@
                         </div>
 
                         <!-- swiper-button-next -->
-                        <div class="photo-button-next"></div>
+                        <div class="photo-button-next photo-next"></div>
                         <!-- /swiper-button-next -->
 
                         <!-- swiper-button-prev -->
-                        <div class="photo-button-prev"></div>
+                        <div class="photo-button-prev photo-prev"></div>
                         <!-- /swiper-button-prev -->
 
                     </div>
@@ -402,12 +443,12 @@
                         <div class="swiper-slide">
 
                             <!-- specialist__item -->
-                            <div class="specialist__item">
+                            <a href="#" class="specialist__item">
                                 <div class="specialist__pic" style="background-image: url(pic/specialist01.jpg)"></div>
                                 <div class="specialist__name">Анжелика Всеволодовна</div>
                                 <div class="specialist__surname">ЗАКАБЛУКОВСКАЯ</div>
                                 <div class="specialist__position">Главный врач</div>
-                            </div>
+                            </a>
                             <!-- /specialist__item -->
 
                         </div>
@@ -417,12 +458,12 @@
                         <div class="swiper-slide">
 
                             <!-- specialist__item -->
-                            <div class="specialist__item">
+                            <a href="#" class="specialist__item">
                                 <div class="specialist__pic" style="background-image: url(pic/specialist02.jpg)"></div>
                                 <div class="specialist__name">Иван Иванович</div>
                                 <div class="specialist__surname">ИВАНОВ</div>
                                 <div class="specialist__position">Главный врач</div>
-                            </div>
+                            </a>
                             <!-- /specialist__item -->
 
                         </div>
@@ -432,12 +473,12 @@
                         <div class="swiper-slide">
                             <!-- specialist__item -->
 
-                            <div class="specialist__item">
+                            <a href="#" class="specialist__item">
                                 <div class="specialist__pic" style="background-image: url(pic/specialist01.jpg)"></div>
                                 <div class="specialist__name">Анжелика Всеволодовна</div>
                                 <div class="specialist__surname">ЗАКАБЛУКОВСКАЯ</div>
                                 <div class="specialist__position">Главный врач</div>
-                            </div>
+                            </a>
                             <!-- /specialist__item -->
 
                         </div>
@@ -564,23 +605,14 @@
 
             <!-- site__information-menu -->
             <div class="site__information-menu">
-
-                <div>
                     <!-- site__information-links -->
                     <a class="site__information-links" href="#">Об отделении</a>
                     <a class="site__information-links" href="#">Специалисты</a>
                     <a class="site__information-links" href="#">Фото до и после</a>
-                    <!-- /site__information-links -->
-                </div>
-
-                <div>
-                    <!-- site__information-links -->
                     <a class="site__information-links" href="#">Отзывы</a>
                     <a class="site__information-links" href="#">Пациентам</a>
                     <a class="site__information-links" href="#">Контакты</a>
                     <!-- /site__information-links -->
-                </div>
-
             </div>
             <!-- /site__information-menu -->
 
@@ -588,11 +620,30 @@
             <div class="site__information-type">
 
                 <!-- site__information-stomatology -->
-                <a class="site__information-stomatology" href="#">Стоматология</a>
+                <a class="site__information-item site__information-stomatology" href="#">Стоматология</a>
                 <!-- /site__information-stomatology -->
 
                 <!-- site__information-maxillofacial -->
-                <a class="site__information-maxillofacial" href="#">Челюстно-лицевая хирургия</a>
+                <a class="site__information-item site__information-maxillofacial" href="#">Челюстно-лицевая хирургия</a>
+                <!-- /site__information-maxillofacial -->
+
+                <!-- site__information-maxillofacial -->
+                <a class="site__information-item site__information-plastic" href="#">Пластическая
+                    хирургия</a>
+                <!-- /site__information-maxillofacial -->
+
+                <!-- site__information-maxillofacial -->
+                <a class="site__information-item site__information-orthodontics" href="#">Ортодонтия
+                    и детская стоматология</a>
+                <!-- /site__information-maxillofacial -->
+
+                <!-- site__information-maxillofacial -->
+                <a class="site__information-item site__information-diagnostics" href="#">Рентгендиагностика</a>
+                <!-- /site__information-maxillofacial -->
+
+                <!-- site__information-maxillofacial -->
+                <a class="site__information-item site__information-laboratory_dental" href="#">Зуботехническая
+                    лаборатория</a>
                 <!-- /site__information-maxillofacial -->
 
             </div>
@@ -625,6 +676,39 @@
 
 </div>
 <!-- /site -->
+
+<!-- popup -->
+<div class="popup">
+
+    <!-- popup__wrap -->
+    <form class="popup__wrap">
+
+        <div class="popup__close"></div>
+            <fieldset>
+                <label for="pop1">Ваше имя:</label>
+                <input id="pop1" type="text">
+            </fieldset>
+
+            <fieldset>
+                <label for="pop2">Номер телефона:<span>*</span></label>
+                <input id="pop2" type="tel" required="">
+            </fieldset>
+
+            <fieldset>
+                <label for="pop3">Удобное время для звонка:</label>
+                <input id="pop3" type="text">
+            </fieldset>
+
+            <fieldset>
+                <label><input id="pop4" type="checkbox" checked>Я соглашаюсь на обработку персональных данных</label>
+            </fieldset>
+
+            <input class="popup__send site__btn" type="submit" value="отправить">
+    </form>
+    <!-- /popup__wrap -->
+
+</div>
+<!-- popup -->
 
 <script src="js/jquery-2.2.1.min.js"></script>
 <script src="js/swiper.jquery.min.js"></script>
