--- a/inside.html
+++ b/inside.html
@@ -22,29 +22,7 @@
 
         <h1 class="logo">
             <img src="img/logo.png" alt="logo">
-            <span>пластическая хирургия</span>
         </h1><!-- /logo -->
-
-        <!-- menu -->
-        <nav class="header__menu">
-
-            <!-- menu__btn -->
-            <button class="header__menu-btn"><span></span>Меню</button>
-            <!-- /menu__btn -->
-
-            <!-- menu__wrap -->
-            <div class="header__menu-wrap">
-                <a href="#">Об отделении</a>
-                <a href="#">Специалисты</a>
-                <a href="#">Фото до и после</a>
-                <a href="#">Отзывы</a>
-                <a href="#">Пациентам</a>
-                <a href="#">Контакты</a>
-            </div>
-            <!-- /menu__wrap -->
-
-        </nav>
-        <!-- /menu -->
 
         <!-- site__header-work-time -->
         <div class="site__header-work-time">
@@ -198,6 +176,139 @@
                             <!-- /catalog__title -->
 
                             <p>Намеченных плановых заданий требуют определения и уточнения позиций, занимаемых Намеченных плановых заданий требуют </p>
+
+                        </div>
+                        <!-- /catalog__text -->
+
+                    </article>
+                    <!-- /catalog__content -->
+
+                </div>
+                <!-- /catalog__item -->
+
+                <!-- catalog__item -->
+                <div class="catalog__item">
+
+                    <!-- catalog__hider -->
+                    <span class="catalog__hider">
+                        <img src="img/icon-004.png" alt="icon"/>
+                        Ортодонтия и детская стоматология
+                    </span>
+                    <!-- /catalog__hider -->
+
+                    <!-- catalog__content -->
+                    <article class="catalog__content">
+
+                        <!-- catalog__img -->
+                        <div class="catalog__img">
+                            <img src="pic/catalog-004.jpg" alt="img"/>
+                        </div>
+                        <!-- /catalog__img -->
+
+                        <!-- catalog__icon -->
+                        <div class="catalog__icon">
+                            <img src="img/icon-004.png" alt="icon"/>
+                        </div>
+                        <!-- /catalog__icon -->
+
+                        <!-- catalog__text -->
+                        <div class="catalog__text">
+
+                            <!-- catalog__title -->
+                            <h2 class="catalog__title"><a href="#">Ортодонтия и детская стоматология</a></h2>
+                            <!-- /catalog__title -->
+
+                            <p>Намеченных плановых заданий требуют определения и уточне-
+                                ния позиций, занимаемых Намеченных плановых заданий требуют определения и уточне-</p>
+
+                        </div>
+                        <!-- /catalog__text -->
+
+                    </article>
+                    <!-- /catalog__content -->
+
+                </div>
+                <!-- /catalog__item -->
+
+                <!-- catalog__item -->
+                <div class="catalog__item">
+
+                    <!-- catalog__hider -->
+                    <span class="catalog__hider">
+                        <img src="img/icon-005.png" alt="icon"/>
+                        Рентгендиагностика
+                    </span>
+                    <!-- /catalog__hider -->
+
+                    <!-- catalog__content -->
+                    <article class="catalog__content">
+
+                        <!-- catalog__img -->
+                        <div class="catalog__img">
+                            <img src="pic/catalog-005.jpg" alt="img"/>
+                        </div>
+                        <!-- /catalog__img -->
+
+                        <!-- catalog__icon -->
+                        <div class="catalog__icon">
+                            <img src="img/icon-005.png" alt="icon"/>
+                        </div>
+                        <!-- /catalog__icon -->
+
+                        <!-- catalog__text -->
+                        <div class="catalog__text">
+
+                            <!-- catalog__title -->
+                            <h2 class="catalog__title"><a href="#">Рентгендиагностика</a></h2>
+                            <!-- /catalog__title -->
+
+                            <p>Намеченных плановых заданий требуют определения и уточне-
+                                ния позиций, занимаемых.
+                                Намеченных плановых заданий требуют определения и уточне-
+                                ния позиций, занимаемых</p>
+
+                        </div>
+                        <!-- /catalog__text -->
+
+                    </article>
+                    <!-- /catalog__content -->
+
+                </div>
+                <!-- /catalog__item -->
+
+                <!-- catalog__item -->
+                <div class="catalog__item">
+
+                    <!-- catalog__hider -->
+                    <span class="catalog__hider">
+                        <img src="img/icon-006.png" alt="icon"/>
+                        Зуботехническая лаборатория
+                    </span>
+                    <!-- /catalog__hider -->
+
+                    <!-- catalog__content -->
+                    <article class="catalog__content">
+
+                        <!-- catalog__img -->
+                        <div class="catalog__img">
+                            <img src="pic/catalog-006.jpg" alt="img"/>
+                        </div>
+                        <!-- /catalog__img -->
+
+                        <!-- catalog__icon -->
+                        <div class="catalog__icon">
+                            <img src="img/icon-006.png" alt="icon"/>
+                        </div>
+                        <!-- /catalog__icon -->
+
+                        <!-- catalog__text -->
+                        <div class="catalog__text">
+
+                            <!-- catalog__title -->
+                            <h2 class="catalog__title"><a href="#">Зуботехническая лаборатория</a></h2>
+                            <!-- /catalog__title -->
+
+                            <p>Намеченных плановых заданий требуют определения и уточнения позиций, занимаемых Намеченных плановых заданий требуют</p>
 
                         </div>
                         <!-- /catalog__text -->
