--- a/about-us.html
+++ b/about-us.html
@@ -267,23 +267,14 @@
 
             <!-- site__information-menu -->
             <div class="site__information-menu">
-
-                <div>
-                    <!-- site__information-links -->
-                    <a class="site__information-links" href="#">Об отделении</a>
-                    <a class="site__information-links" href="#">Специалисты</a>
-                    <a class="site__information-links" href="#">Фото до и после</a>
-                    <!-- /site__information-links -->
-                </div>
-
-                <div>
-                    <!-- site__information-links -->
-                    <a class="site__information-links" href="#">Отзывы</a>
-                    <a class="site__information-links" href="#">Пациентам</a>
-                    <a class="site__information-links" href="#">Контакты</a>
-                    <!-- /site__information-links -->
-                </div>
-
+                <!-- site__information-links -->
+                <a class="site__information-links" href="#">Об отделении</a>
+                <a class="site__information-links" href="#">Специалисты</a>
+                <a class="site__information-links" href="#">Фото до и после</a>
+                <a class="site__information-links" href="#">Отзывы</a>
+                <a class="site__information-links" href="#">Пациентам</a>
+                <a class="site__information-links" href="#">Контакты</a>
+                <!-- /site__information-links -->
             </div>
             <!-- /site__information-menu -->
 
@@ -291,11 +282,30 @@
             <div class="site__information-type">
 
                 <!-- site__information-stomatology -->
-                <a class="site__information-stomatology" href="#">Стоматология</a>
+                <a class="site__information-item site__information-stomatology" href="#">Стоматология</a>
                 <!-- /site__information-stomatology -->
 
                 <!-- site__information-maxillofacial -->
-                <a class="site__information-maxillofacial" href="#">Челюстно-лицевая хирургия</a>
+                <a class="site__information-item site__information-maxillofacial" href="#">Челюстно-лицевая хирургия</a>
+                <!-- /site__information-maxillofacial -->
+
+                <!-- site__information-maxillofacial -->
+                <a class="site__information-item site__information-plastic" href="#">Пластическая
+                    хирургия</a>
+                <!-- /site__information-maxillofacial -->
+
+                <!-- site__information-maxillofacial -->
+                <a class="site__information-item site__information-orthodontics" href="#">Ортодонтия
+                    и детская стоматология</a>
+                <!-- /site__information-maxillofacial -->
+
+                <!-- site__information-maxillofacial -->
+                <a class="site__information-item site__information-diagnostics" href="#">Рентгендиагностика</a>
+                <!-- /site__information-maxillofacial -->
+
+                <!-- site__information-maxillofacial -->
+                <a class="site__information-item site__information-laboratory_dental" href="#">Зуботехническая
+                    лаборатория</a>
                 <!-- /site__information-maxillofacial -->
 
             </div>
